--- a/gallery.html
+++ b/gallery.html
@@ -36,12 +36,54 @@
         <div class="gallery-heading-center">
           <h2 class="gallery-main-heading">Gallery</h2>
           <p class="gallery-heading-info">These are moments from throughout Captain's Mode League history</p>
-          <p class="gallery-heading-instruction">Click on the images below:</p>
+          <p class="gallery-heading-instruction">Click on the heading's below:</p>
         </div>
         <img src="/images/captainsmode-logo.webp"  class="gallery-heading-image" id="gallery-heading-image">
       </div>
       
+      <div class="bd-example">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/images/team-images/image-4.jpeg" class="d-block" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/images/team-images/image-5.jpeg" class="d-block" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/images/team-images/image-6.jpeg" class="d-block" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+
       <div class="gallery-images-area">
+
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
             <button class="btn btn-link" id="btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
