changes to the league and gallery pages

--- a/landing.html
+++ b/landing.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#" id="nav-link">merch</a>
             </li>
           </ul>
-          <button type="button" class="login-button">Login</button>
+          <!-- <button type="button" class="login-button">Login</button> -->
         </div>
       </nav>
       
