--- a/divisions.html
+++ b/divisions.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#" id="nav-link">merch</a>
             </li>
           </ul>
-          <button type="button" class="login-button">Login</button>
+          <!-- <button type="button" class="login-button">Login</button> -->
         </div>
       </nav>
 
@@ -108,6 +108,7 @@
                       <img src="/images/logos/going west.png" class="team-logo">
                     </div>
                 </div>
+                <h6 class="league-standing-heading">December League</h6>
                   <div class="division-standing-area">
                     <table>
                         <tr>
@@ -262,6 +263,7 @@
                       <img src="/images/logos/going west.png" class="team-logo">
                     </div>
                 </div>
+                <h6 class="league-standing-heading">December League</h6>
                   <div class="division-standing-area">
                     <table>
                         <tr>
@@ -416,6 +418,7 @@
                       <img src="/images/logos/going west.png" class="team-logo">
                     </div>
                 </div>
+                <h6 class="league-standing-heading">December League</h6>
                   <div class="division-standing-area">
                     <table>
                         <tr>
