--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#" id="nav-link">merch</a>
             </li>
           </ul>
-          <button type="button" class="login-button">Login</button>
+          <!-- <button type="button" class="login-button">Login</button> -->
         </div>
       </nav>
 
@@ -41,44 +41,27 @@
         <img src="/images/captainsmode-logo.webp"  class="gallery-heading-image" id="gallery-heading-image">
       </div>
       
-      <div class="bd-example">
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="/images/team-images/image-4.jpeg" class="d-block" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="/images/team-images/image-5.jpeg" class="d-block" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="/images/team-images/image-6.jpeg" class="d-block" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-              </div>
-            </div>
+      <h2 class="carousel-heading">Captain's Mode League Gallery</h2>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+              <img src="/images/team-images/image-1.jpeg" class="d-block" alt="...">
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+          <div class="carousel-item">
+            <img src="/images/team-images/image-2.jpeg" class="d-block" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/team-images/image-3.jpeg" class="d-block" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/team-images/image-4.jpeg" class="d-block" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/team-images/image-5.jpeg" class="d-block" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/team-images/image-6.jpeg" class="d-block" alt="...">
+          </div>
         </div>
       </div>
 
