added new team logos

--- a/divisions.html
+++ b/divisions.html
@@ -46,7 +46,7 @@
         <div class="league-champions">
           <div class="league-champions">
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">01/2021</p>
             </div>
             <div class="league-champion">
@@ -54,27 +54,27 @@
               <p class="league-champion-date">02/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">03/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/forsaken dragons.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/forsaken dragons.png" class="league-champion-logos">
               <p class="league-champion-date">04/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/BSL Liquid.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/BSL Liquid.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
           </div>
@@ -92,9 +92,9 @@
               <div class="card-body">
                 <div class="division-A-league">
                     <div class="teams">
-                      <img src="/images/logos/senior squad nb.png" class="team-logo">
+                      <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
                       <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                      <img src="/images/logos/MLGC Nazguls.png" class="team-logo">
+                      <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
                       <img src="/images/logos/grim knights.png" class="team-logo">
                       <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
                       <img src="/images/logos/nova gaming.png" class="team-logo">
@@ -104,8 +104,8 @@
                       <img src="/images/logos/above average gaming.png" class="team-logo">
                       <img src="/images/logos/BSL toxic.png" class="team-logo">
                       <img src="/images/logos/cg9.png" class="team-logo">
-                      <img src="/images/logos/forsaken dragons.png" class="team-logo">
-                      <img src="/images/logos/going west.png" class="team-logo">
+                      <img src="/images/logos/A-league/forsaken dragons.png" class="team-logo">
+                      <img src="/images/logos/A-league/going west.png" class="team-logo">
                     </div>
                 </div>
                 <h6 class="league-standing-heading">December League</h6>
@@ -201,7 +201,7 @@
         <div class="league-champions">
           <div class="league-champions">
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">01/2021</p>
             </div>
             <div class="league-champion">
@@ -209,27 +209,27 @@
               <p class="league-champion-date">02/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">03/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/forsaken dragons.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/forsaken dragons.png" class="league-champion-logos">
               <p class="league-champion-date">04/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/BSL Liquid.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/BSL Liquid.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
           </div>
@@ -246,22 +246,22 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
               <div class="card-body">
                 <div class="division-A-league">
-                    <div class="teams">
-                      <img src="/images/logos/senior squad nb.png" class="team-logo">
-                      <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                      <img src="/images/logos/MLGC Nazguls.png" class="team-logo">
-                      <img src="/images/logos/grim knights.png" class="team-logo">
-                      <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
-                      <img src="/images/logos/nova gaming.png" class="team-logo">
-                      <img src="/images/logos/team 2.png" class="team-logo">
-                      <img src="/images/logos/metanoia averajoes.png" class="team-logo">
-                      <img src="/images/logos/nova gaming.png" class="team-logo">
-                      <img src="/images/logos/above average gaming.png" class="team-logo">
-                      <img src="/images/logos/BSL toxic.png" class="team-logo">
-                      <img src="/images/logos/cg9.png" class="team-logo">
-                      <img src="/images/logos/forsaken dragons.png" class="team-logo">
-                      <img src="/images/logos/going west.png" class="team-logo">
-                    </div>
+                  <div class="teams">
+                    <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
+                    <img src="/images/logos/nwb anarchy.png" class="team-logo">
+                    <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
+                    <img src="/images/logos/grim knights.png" class="team-logo">
+                    <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
+                    <img src="/images/logos/nova gaming.png" class="team-logo">
+                    <img src="/images/logos/team 2.png" class="team-logo">
+                    <img src="/images/logos/metanoia averajoes.png" class="team-logo">
+                    <img src="/images/logos/nova gaming.png" class="team-logo">
+                    <img src="/images/logos/above average gaming.png" class="team-logo">
+                    <img src="/images/logos/BSL toxic.png" class="team-logo">
+                    <img src="/images/logos/cg9.png" class="team-logo">
+                    <img src="/images/logos/A-league/forsaken dragons.png" class="team-logo">
+                    <img src="/images/logos/A-league/going west.png" class="team-logo">
+                  </div>
                 </div>
                 <h6 class="league-standing-heading">December League</h6>
                   <div class="division-standing-area">
@@ -356,7 +356,7 @@
         <div class="league-champions">
           <div class="league-champions">
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">01/2021</p>
             </div>
             <div class="league-champion">
@@ -364,27 +364,27 @@
               <p class="league-champion-date">02/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">03/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/forsaken dragons.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/forsaken dragons.png" class="league-champion-logos">
               <p class="league-champion-date">04/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/senior squad nb.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/BSL Liquid.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
             <div class="league-champion">
-              <img src="/images/logos/senior squad nb.png" class="league-champion-logos">
+              <img src="/images/logos/A-league/BSL Liquid.png" class="league-champion-logos">
               <p class="league-champion-date">05/2021</p>
             </div>
           </div>
@@ -401,22 +401,22 @@
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
               <div class="card-body">
                 <div class="division-A-league">
-                    <div class="teams">
-                      <img src="/images/logos/senior squad nb.png" class="team-logo">
-                      <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                      <img src="/images/logos/MLGC Nazguls.png" class="team-logo">
-                      <img src="/images/logos/grim knights.png" class="team-logo">
-                      <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
-                      <img src="/images/logos/nova gaming.png" class="team-logo">
-                      <img src="/images/logos/team 2.png" class="team-logo">
-                      <img src="/images/logos/metanoia averajoes.png" class="team-logo">
-                      <img src="/images/logos/nova gaming.png" class="team-logo">
-                      <img src="/images/logos/above average gaming.png" class="team-logo">
-                      <img src="/images/logos/BSL toxic.png" class="team-logo">
-                      <img src="/images/logos/cg9.png" class="team-logo">
-                      <img src="/images/logos/forsaken dragons.png" class="team-logo">
-                      <img src="/images/logos/going west.png" class="team-logo">
-                    </div>
+                  <div class="teams">
+                    <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
+                    <img src="/images/logos/nwb anarchy.png" class="team-logo">
+                    <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
+                    <img src="/images/logos/grim knights.png" class="team-logo">
+                    <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
+                    <img src="/images/logos/nova gaming.png" class="team-logo">
+                    <img src="/images/logos/team 2.png" class="team-logo">
+                    <img src="/images/logos/metanoia averajoes.png" class="team-logo">
+                    <img src="/images/logos/nova gaming.png" class="team-logo">
+                    <img src="/images/logos/above average gaming.png" class="team-logo">
+                    <img src="/images/logos/BSL toxic.png" class="team-logo">
+                    <img src="/images/logos/cg9.png" class="team-logo">
+                    <img src="/images/logos/A-league/forsaken dragons.png" class="team-logo">
+                    <img src="/images/logos/A-league/going west.png" class="team-logo">
+                  </div>
                 </div>
                 <h6 class="league-standing-heading">December League</h6>
                   <div class="division-standing-area">
