--- a/landing.html
+++ b/landing.html
@@ -47,29 +47,31 @@
               <div class="division-1">
                   <h1 class="division-heading">Captain's Mode League A Division</h1>
                   <div class="teams">
-                    <img src="/images/logos/senior squad nb.png" class="team-logo">
-                    <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                    <img src="/images/logos/MLGC Nazguls.png" class="team-logo">
-                    <img src="/images/logos/grim knights.png" class="team-logo">
-                    <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
-                    <img src="/images/logos/nova gaming.png" class="team-logo">
-                    <img src="/images/logos/team 2.png" class="team-logo">
-                    <img src="/images/logos/senior squad nb.png" class="team-logo">
+                    <img src="/images/logos/A-league/aura gaming.png" class="team-logo">
+                    <img src="/images/logos/A-league/BSL Liquid.png" class="team-logo">
+                    <img src="/images/logos/A-league/hoes.png" class="team-logo">
+                    <img src="/images/logos/A-league/Imp B.png" class="team-logo">
+                    <img src="/images/logos/A-league/Imp Red.png" class="team-logo">
+                    <img src="/images/logos/A-league/Outland.png" class="team-logo">
+                    <img src="/images/logos/A-league/The new guard logo.png" class="team-logo">
+                    <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
+                    <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
+                    <img src="/images/logos/A-league/going west.png" class="team-logo">
+                    <img src="/images/logos/A-league/forsaken dragons.png" class="team-logo">
                   </div>
               </div>
               </a>
               <a href="#">
               <div class="division-2">
-                <h1 class="division-heading">Cheese and Wine Division</h1>
+                <h1 class="division-heading">Dojo League</h1>
                 <div class="teams">
-                  <img src="/images/logos/senior squad nb.png" class="team-logo">
-                  <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                  <img src="/images/logos/MLGC Nazguls.png" class="team-logo">
-                  <img src="/images/logos/grim knights.png" class="team-logo">
-                  <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
-                  <img src="/images/logos/nova gaming.png" class="team-logo">
+                  <img src="/images/logos/Dojo-league/Anarchy-02-02.png" class="team-logo">
+                  <img src="/images/logos/Dojo-league/Chaos.png" class="team-logo">
+                  <img src="/images/logos/Dojo-league/Coffins.png" class="team-logo">
+                  <img src="/images/logos/Dojo-league/Dire straits.png" class="team-logo">
+                  <img src="/images/logos/Dojo-league/Eternal.png" class="team-logo">
+                  <img src="/images/logos/Dojo-league/fountain huggers.png" class="team-logo" id="team-logo">
                   <img src="/images/logos/team 2.png" class="team-logo">
-                  <img src="/images/logos/senior squad nb.png" class="team-logo">
                 </div>
               </div>
               </a>
@@ -77,14 +79,14 @@
                 <div class="division-3">
                   <h1 class="division-heading">Cheese and Wine Division</h1>
                   <div class="teams">
-                    <img src="/images/logos/senior squad nb.png" class="team-logo">
-                    <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                    <img src="/images/logos/MLGC Nazguls.png" class="team-logo">
+                    <img src="/images/logos/Cheese-and-wine-league/cod.png" class="team-logo">
+                    <img src="/images/logos/Cheese-and-wine-league/The great herd.png" class="team-logo">
+                    <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
                     <img src="/images/logos/grim knights.png" class="team-logo">
                     <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
                     <img src="/images/logos/nova gaming.png" class="team-logo">
                     <img src="/images/logos/team 2.png" class="team-logo">
-                    <img src="/images/logos/senior squad nb.png" class="team-logo">
+                    <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
                   </div>
                 </div>
                 </a>
