added a teams page

--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>Captain's Mode League</title>
   </head>
   <body>
     <div class="layout-container">
@@ -43,7 +43,7 @@
               <img src="/images/captainsmode-logo.webp">
           </div>
           <div class="division-area">
-              <a href="#">
+              <a href="/divisions.html">
               <div class="division-1">
                   <h1 class="division-heading">Captain's Mode League A Division</h1>
                   <div class="teams">
@@ -61,7 +61,7 @@
                   </div>
               </div>
               </a>
-              <a href="#">
+              <a href="/divisions.html">
               <div class="division-2">
                 <h1 class="division-heading">Dojo League</h1>
                 <div class="teams">
@@ -75,9 +75,9 @@
                 </div>
               </div>
               </a>
-              <a href="#">
+              <a href="/divisions.html">
                 <div class="division-3">
-                  <h1 class="division-heading">Cheese and Wine Division</h1>
+                  <h1 class="division-heading">Cheese and Wine League</h1>
                   <div class="teams">
                     <img src="/images/logos/Cheese-and-wine-league/cod.png" class="team-logo">
                     <img src="/images/logos/Cheese-and-wine-league/The great herd.png" class="team-logo">
