--- a/divisions.html
+++ b/divisions.html
@@ -91,21 +91,22 @@
             <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body">
                 <div class="division-A-league">
+                  <p class="division-teams-instruction">Click on logo to few team page</p>
                     <div class="teams">
-                      <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
-                      <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                      <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
-                      <img src="/images/logos/grim knights.png" class="team-logo">
-                      <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
-                      <img src="/images/logos/nova gaming.png" class="team-logo">
-                      <img src="/images/logos/team 2.png" class="team-logo">
-                      <img src="/images/logos/metanoia averajoes.png" class="team-logo">
-                      <img src="/images/logos/nova gaming.png" class="team-logo">
-                      <img src="/images/logos/above average gaming.png" class="team-logo">
-                      <img src="/images/logos/BSL toxic.png" class="team-logo">
-                      <img src="/images/logos/cg9.png" class="team-logo">
-                      <img src="/images/logos/A-league/forsaken dragons.png" class="team-logo">
-                      <img src="/images/logos/A-league/going west.png" class="team-logo">
+                      <a href="/team-page.html"><img src="/images/logos/A-league/senior squad nb.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/nwb anarchy.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/grim knights.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/Gravetide 5 nb.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/nova gaming.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/team 2.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/metanoia averajoes.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/nova gaming.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/above average gaming.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/BSL toxic.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/cg9.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/A-league/forsaken dragons.png" class="team-logo"></a>
+                      <a href="#"><img src="/images/logos/A-league/going west.png" class="team-logo"></a>
                     </div>
                 </div>
                 <h6 class="league-standing-heading">December League</h6>
@@ -246,21 +247,22 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
               <div class="card-body">
                 <div class="division-A-league">
+                  <p class="division-teams-instruction">Click on logo to few team page</p>
                   <div class="teams">
-                    <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
-                    <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                    <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
-                    <img src="/images/logos/grim knights.png" class="team-logo">
-                    <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
-                    <img src="/images/logos/nova gaming.png" class="team-logo">
-                    <img src="/images/logos/team 2.png" class="team-logo">
-                    <img src="/images/logos/metanoia averajoes.png" class="team-logo">
-                    <img src="/images/logos/nova gaming.png" class="team-logo">
-                    <img src="/images/logos/above average gaming.png" class="team-logo">
-                    <img src="/images/logos/BSL toxic.png" class="team-logo">
-                    <img src="/images/logos/cg9.png" class="team-logo">
-                    <img src="/images/logos/A-league/forsaken dragons.png" class="team-logo">
-                    <img src="/images/logos/A-league/going west.png" class="team-logo">
+                    <a href="#"><img src="/images/logos/A-league/senior squad nb.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/nwb anarchy.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/grim knights.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/Gravetide 5 nb.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/nova gaming.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/team 2.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/metanoia averajoes.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/nova gaming.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/above average gaming.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/BSL toxic.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/cg9.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/A-league/forsaken dragons.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/A-league/going west.png" class="team-logo"></a>
                   </div>
                 </div>
                 <h6 class="league-standing-heading">December League</h6>
@@ -401,21 +403,22 @@
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
               <div class="card-body">
                 <div class="division-A-league">
+                  <p class="division-teams-instruction">Click on logo to few team page</p>
                   <div class="teams">
-                    <img src="/images/logos/A-league/senior squad nb.png" class="team-logo">
-                    <img src="/images/logos/nwb anarchy.png" class="team-logo">
-                    <img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo">
-                    <img src="/images/logos/grim knights.png" class="team-logo">
-                    <img src="/images/logos/Gravetide 5 nb.png" class="team-logo">
-                    <img src="/images/logos/nova gaming.png" class="team-logo">
-                    <img src="/images/logos/team 2.png" class="team-logo">
-                    <img src="/images/logos/metanoia averajoes.png" class="team-logo">
-                    <img src="/images/logos/nova gaming.png" class="team-logo">
-                    <img src="/images/logos/above average gaming.png" class="team-logo">
-                    <img src="/images/logos/BSL toxic.png" class="team-logo">
-                    <img src="/images/logos/cg9.png" class="team-logo">
-                    <img src="/images/logos/A-league/forsaken dragons.png" class="team-logo">
-                    <img src="/images/logos/A-league/going west.png" class="team-logo">
+                    <a href="#"><img src="/images/logos/A-league/senior squad nb.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/nwb anarchy.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/A-league/MLGC Nazguls.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/grim knights.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/Gravetide 5 nb.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/nova gaming.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/team 2.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/metanoia averajoes.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/nova gaming.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/above average gaming.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/BSL toxic.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/cg9.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/A-league/forsaken dragons.png" class="team-logo"></a>
+                    <a href="#"><img src="/images/logos/A-league/going west.png" class="team-logo"></a>
                   </div>
                 </div>
                 <h6 class="league-standing-heading">December League</h6>
