--- a/team-member-page.html
+++ b/team-member-page.html
@@ -32,85 +32,62 @@
 
       <h1 class="team-profile-heading">Team Profile</h1>
       <div class="team-profile-area">
-          <div class="team-profile">
+          <div class="member-profile">
           <div class="team-image">
-              <img src="/images/logos/A-league/aura gaming.png" class="team-profile-logo">
-              <h3 class="team-name">Aura Gaming</h3>
+              <img src="/images/team-member-images/example-image.jpg" class="member-image">
+              <h3 class="team-name">Grant Davidson</h3>
           </div>
-          <div class="team-information">
-              <h5 class="team-league-heading">League</h5>
-              <p class="team-league">A League</p>
+          <div class="member-information">
+              <h5 class="team-league-heading">Rank</h5>
+              <p class="team-league">#1</p>
               <h5 class="team-score-heading">Record</h5>
               <p class="team-score">5 / 7</p>
-              <h5 class="team-position-heading">League Position</h5>
-              <p class="team-position">1st</p>
+              <h5 class="team-position-heading">Current Team</h5>
+              <p class="team-position">Montwood Gaming</p>
           </div>
         </div>
       </div>
-      <h3 class="team-member-heading">Team Members</h3>
-      <div class="team-member-area">
-          <div class="team-member-row">
-            <a href="/team-member-page.html" class="team-member-link">
-            <div class="team-member-left">
-                <img src="/images/team-member-images/example-image.jpg" class="team-member-image">
-                <div class="team-member-information">
-                  <h4 class="team-member-name">Grant Davidson</h4>
-                  <h5 class="team-member-tag">Qthang</h5>
-                  <h6 class="team-member-location">Durban</h6>
-                  <h6 class="team-member-position">Mid</h6>
-                </div>
-            </div>
-          </a>
-          <a href="#" class="team-member-link-right">
-            <div class="team-member-right">
-              <img src="/images/team-member-images/example-image.jpg" class="team-member-image">
-              <div class="team-member-information">
-                <h4 class="team-member-name">Grant Davidson</h4>
-                <h5 class="team-member-tag">Qthang</h5>
-                <h6 class="team-member-location">Durban</h6>
-                <h6 class="team-member-position">Mid</h6>
-              </div>
-            </div>
-          </a>
+      <h3 class="member-stats-heading">Stats</h3>
+      <div class="member-stats-area">
+          <div class="member-stats">
+        <div class="member-stats-row">
+          <div class="member-stats-right">
+              <h5 class="member-stat-heading">Matches</h5>
+              <p class="member-matches-stat">2-1</p>
           </div>
-          <div class="team-member-row">
-            <a href="#" class="team-member-link">
-            <div class="team-member-left">
-                <img src="/images/team-member-images/example-image.jpg" class="team-member-image">
-                <div class="team-member-information">
-                  <h4 class="team-member-name">Grant Davidson</h4>
-                  <h5 class="team-member-tag">Qthang</h5>
-                  <h6 class="team-member-location">Durban</h6>
-                  <h6 class="team-member-position">Mid</h6>
-                </div>
-            </div>
-          </a>
-            <a href="#" class="team-member-link-right">
-            <div class="team-member-right">
-              <img src="/images/team-member-images/example-image.jpg" class="team-member-image">
-              <div class="team-member-information">
-                <h4 class="team-member-name">Grant Davidson</h4>
-                <h5 class="team-member-tag">Qthang</h5>
-                <h6 class="team-member-location">Durban</h6>
-                <h6 class="team-member-position">Mid</h6>
-              </div>
-            </div>
-          </a>
+          <div class="member-stats-left">
+            <h5 class="member-stat-heading">KDA</h5>
+            <p class="member-matches-stat">20</p>
           </div>
-          <div class="team-member-row">
-            <a href="#" class="team-member-link">
-            <div class="team-member-left">
-                <img src="/images/team-member-images/example-image.jpg" class="team-member-image">
-                <div class="team-member-information">
-                  <h4 class="team-member-name">Grant Davidson</h4>
-                  <h5 class="team-member-tag">Qthang</h5>
-                  <h6 class="team-member-location">Durban</h6>
-                  <h6 class="team-member-position">Mid</h6>
-                </div>
+        </div>
+        <div class="member-stats-row">
+            <div class="member-stats-right">
+                <h5 class="member-stat-heading">Assists</h5>
+                <p class="member-matches-stat">18.50</p>
             </div>
-          </a>
-          </div>
-       </div>
+            <div class="member-stats-left">
+              <h5 class="member-stat-heading">LH</h5>
+              <p class="member-matches-stat">325.30</p>
+            </div>
+        </div>
+        <div class="member-stats-row">
+            <div class="member-stats-right">
+                <h5 class="member-stat-heading">DN</h5>
+                <p class="member-matches-stat">5.50</p>
+            </div>
+            <div class="member-stats-left">
+              <h5 class="member-stat-heading">GPM</h5>
+              <p class="member-matches-stat">568</p>
+            </div>
+        </div>
+        <div class="member-stats-row">
+            <div class="member-stats-right">
+                <h5 class="member-stat-heading">XPM</h5>
+                <p class="member-matches-stat">717</p>
+            </div>
+        </div>
+        </div>
+      </div>
        <h3 class="team-results-heading">Recent Matches</h3>
        <div class="team-results-area">
            <div class="team-result-row">
